Fix sort button z-index

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,6 +31,7 @@
     top: 0;
     vertical-align: middle;
     right: 0;
+    z-index: 3;
 
     &--target {
         border-radius: 2px;
